tons of refactors, change maven group to gay.sylv.vulpixel, now detects yqh.mod.json