@@ -1,7 +1,14 @@
 package net.cursedmc.yqh;
 
-import net.auoeke.reflect.Classes;
+import com.sun.tools.attach.AgentInitializationException;
+import com.sun.tools.attach.AgentLoadException;
+import com.sun.tools.attach.AttachNotSupportedException;
+import com.sun.tools.attach.VirtualMachine;
+import it.unimi.dsi.fastutil.Pair;
+import net.auoeke.reflect.Accessor;
+import net.auoeke.reflect.ClassDefiner;
 import net.bytebuddy.agent.ByteBuddyAgent;
+import net.cursedmc.yqh.api.instrumentation.Music;
 import net.devtech.grossfabrichacks.unsafe.UnsafeUtil;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.SystemUtils;
@@ -9,17 +16,27 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.ApiStatus;
 import org.quiltmc.loader.api.LanguageAdapter;
-import org.quiltmc.loader.api.LanguageAdapterException;
 import org.quiltmc.loader.api.ModContainer;
+import org.quiltmc.loader.api.QuiltLoader;
+import org.quiltmc.loader.api.plugin.ModContainerExt;
 import org.quiltmc.loader.impl.launch.knot.Knot;
-import org.quiltmc.loader.impl.launch.knot.UnsafeKnotClassLoader;
+import org.quiltmc.loader.impl.metadata.qmj.AdapterLoadableClassEntry;
 
 import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
 import java.lang.management.ManagementFactory;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.Collection;
+import java.util.Map;
 import java.util.Objects;
 import java.util.jar.JarFile;
+import java.util.stream.Stream;
+
+import static com.enderzombi102.enderlib.SafeUtils.doSafely;
 
 @ApiStatus.Internal
 public class YummyQuiltHacks implements LanguageAdapter {
@@ -35,6 +52,27 @@ public class YummyQuiltHacks implements LanguageAdapter {
 	@Override
 	public native <T> T create(ModContainer mod, String value, Class<T> type);
 	
+	private static void selfAttach(String path, String pid) {
+		try {
+			Accessor.<Map<String, String>>getReference(Class.forName("jdk.internal.misc.VM"), "savedProps").put("jdk.attach.allowAttachSelf", "true");
+		} catch (ClassNotFoundException e) {
+			LOGGER.error("Oops! Looks like we can't force self-attaching. If you are reading this and the game has crashed, please add \"-Djdk.attach.allowAttachSelf=true\" to your JVM arguments.");
+		}
+		
+		try {
+			VirtualMachine vm = VirtualMachine.attach(pid);
+			vm.loadAgent(path);
+		} catch (AttachNotSupportedException e) {
+			LOGGER.error("Self-attachment has failed! Try adding \"-Djdk.attach.allowAttachSelf=true\" to your JVM arguments.");
+			throw new RuntimeException(e);
+		} catch (AgentLoadException | AgentInitializationException e) {
+			LOGGER.error("The agent has failed to load.");
+			throw new RuntimeException(e);
+		} catch (IOException e) {
+			throw new RuntimeException(e);
+		}
+	}
+	
 	static {
 		boolean doPwn = Boolean.parseBoolean(System.getProperty("yqh.relaunch", "false"));
 		doPwn = doPwn || !RELAUNCH; // FIXME: do this until we get relaunching working
@@ -42,36 +80,45 @@ public class YummyQuiltHacks implements LanguageAdapter {
 			final ClassLoader appLoader = Knot.class.getClassLoader();
 			final ClassLoader knotLoader = YummyQuiltHacks.class.getClassLoader();
 			
-			String jarPath = Objects.requireNonNull(YummyQuiltHacks.class.getClassLoader().getResource("yummy_agent.jar")).getPath();
+			byte[] jarBytes;
+			try (InputStream is = Objects.requireNonNull(YummyQuiltHacks.class.getClassLoader().getResource("yummy_agent.jar")).openStream()) {
+				jarBytes = is.readAllBytes();
+			} catch (IOException e) {
+				throw new RuntimeException(e);
+			}
+			
+			LOGGER.info(YummyQuiltHacks.class.getProtectionDomain().getCodeSource().getLocation());
 			final String vmPid = String.valueOf(ManagementFactory.getRuntimeMXBean().getPid());
 			
-			if (jarPath.startsWith("file:")) {
-				// sanitize path
-				jarPath = jarPath.replaceAll("file:|!/yummy_agent\\.jar", "");
-				jarPath = URLDecoder.decode(jarPath, StandardCharsets.UTF_8);
-				
-				
-				// find yummy_agent.jar inside jar and make a temp jar of it
-				final JarFile jar = new JarFile(FileUtils.getFile(jarPath));
-				final byte[] jarBytes = jar.getInputStream(jar.getJarEntry("yummy_agent.jar")).readAllBytes();
-				jar.close();
-				final File tempJar = File.createTempFile("tmp_", null);
-				FileUtils.writeByteArrayToFile(tempJar, jarBytes);
-				
-				ByteBuddyAgent.attach(FileUtils.getFile(tempJar.getAbsolutePath()), vmPid);
-			} else {
-				if (SystemUtils.IS_OS_WINDOWS) {
-					jarPath = jarPath.replaceFirst("/", ""); // windows bad
-				}
-				
-				ByteBuddyAgent.attach(FileUtils.getFile(jarPath), vmPid);
-			}
+			// make a temp file of the agent jar, so we can attach it
+			final File tempJar = File.createTempFile("tmp_", null);
+			FileUtils.writeByteArrayToFile(tempJar, jarBytes);
+			
+			ByteBuddyAgent.attach(FileUtils.getFile(tempJar.getAbsolutePath()), vmPid);
 			
 			UnsafeUtil.initializeClass(appLoader.loadClass("org.quiltmc.loader.impl.launch.knot.UnsafeKnotClassLoader"));
 			
 			UNSAFE_LOADER = knotLoader;
 			
 			LOGGER.fatal("Quilt has been successfully pwned >:3");
+			
+			try (Stream<ModContainer> stream = QuiltLoader.getAllMods().stream()) {
+				stream
+						.map(mod -> Pair.of(mod, mod.getPath("yqh.mod.json")))
+						.forEach(pair -> {
+							ModContainer mod = pair.left();
+							Path path = pair.right();
+							if (Files.isRegularFile(path)) {
+								LOGGER.info(mod.metadata().name() + " has yqh.mod.json");
+								byte[] manifestBytes;
+								try {
+									manifestBytes = Files.readAllBytes(path);
+								} catch (IOException e) {
+									throw new RuntimeException(e);
+								}
+							}
+						});
+			}
 		} else {
 			UNSAFE_LOADER = null;
 		}
